fixes for issues. Removed zoom and changed height and width. Changed padding in the input-group-addon, changed the padding for select alignment of text.

--- a/src/global/less/corporate-ui/input-groups.less
+++ b/src/global/less/corporate-ui/input-groups.less
@@ -30,15 +30,12 @@
   }
 
  &-addon {
-   // padding: 0px;
-   padding: 6px 9.5px 3px 12px;
    font-size: inherit;
    color: #555;
    border: 1px solid #94999d;
    background-color: #fff;
    border-radius: 0px;
-   // padding-right: 15px;
-   // padding-left: 15px;
+   padding-left: 15px;
     &:first-child {
       border-top-left-radius: @input-border-radius;
       border-bottom-left-radius: @input-border-radius;
