--- a/src/global/less/corporate-ui/mixins.less
+++ b/src/global/less/corporate-ui/mixins.less
@@ -88,12 +88,12 @@
     -moz-transform: scale(0.8);
     -ms-transform: scale(1);
     -moz-transform-origin: 0 0;
-    zoom: 0.8;
+    // zoom: 0.8;
     vertical-align: text-bottom;
 
     .app & {
-      width: 20px;
-      height: 20px;
+      width: 16px;
+      height: 16px;
     }
 
     &:before {
@@ -175,8 +175,8 @@
     border: 1px solid transparent;
 
     .app & {
-      margin-left: 0px;
-    }
+          margin-left: 0px;
+    margin-right: 0px;    }
 
     &:before {
       content: "";
